--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -137,7 +137,7 @@
                     <input type="search" name="q" id="searchInput" placeholder="Search..." autocomplete="off">
                 </form>
                 {{#if showButtons}}
-                    <button class="fg-button button" id="attendance-check-button">
+                    <button class="fg-button button" id="attendance-check-button-desktop">
                         <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
                             <i class="lni lni-user-multiple-4"></i>
                             <p>Check attendance</p>
@@ -175,14 +175,22 @@
             <div class="team-mini-grid">
                 {{!-- <ul id="memberList"></ul>
             <p id="emptyMessage" style="display: none;">No matching team members found.</p> --}}
-            {{#if supplierList.length}}
-                {{#each supplierList}}
-                    {{> supplierMini this}}
+            {{#if teamMembers.length}}
+                {{#each teamMembers}}
+                    {{> teamMemberMini this}}
                 {{/each}}
             {{else}}
-                <p>Currently no suppliers in this event.</p>
+                <p>Currently no members in this event.</p>
             {{/if}}
             </div>
+            {{#if showButtons}}
+                    <button class="fg-button button" id="attendance-check-button-mobile">
+                        <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
+                            <i class="lni lni-user-multiple-4"></i>
+                            <p>Check attendance</p>
+                        </a>
+                    </button>
+                {{/if}}
         </div>
 
 
