fix: text on login screen too small

--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -106,6 +106,7 @@
             <button type="button" class="disabled-button bg-button button" id="form-back-button" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-arrow-left"></i>
+                    <p>Back</p>
                 </div>
             </button>
             <button type="button" class="disabled-button fg-button button" id="form-next-button" disabled>
