--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -34,13 +34,6 @@
     gap: var(--small-gap);
 }
 
-.form-controls {
-    display: flex;
-    gap: var(--small-gap);
-    align-self: flex-end;
-    background: var(--card-bg);
-}
-
 .form-hidden-button {
     display: none;
 }
@@ -119,12 +112,6 @@
         flex-direction: column;
     }
 
-    .button {
-        padding: var(--card-padding);
-        font-size: 0.8rem;
-        border-radius: var(--card-radius);
-    }
-
     .button-wrapper {
         display: flex;
         align-items: center;
@@ -164,9 +151,13 @@
     }
 
     .form-controls {
+        align-self: center;
+        position: fixed;
+        bottom: 0;
+        width: 100vw;
+        display: flex;
         gap: var(--small-gap);
-        flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     .button-wrapper {
