--- a/views/pastEvents.hbs
+++ b/views/pastEvents.hbs
@@ -1,4 +1,6 @@
-<h2 class="header">Past Events</h2>
+<div class="page-title-bar">
+    <h2 class="header">Past Events</h2>
+</div>
 
 <div class="event-list-top">
     <form role="search" class="search-bar" id="eventSearchForm">
