--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,8 +13,10 @@
             <input type="text" placeholder="Mobile number" name="number" class="login-field" />
             <input type="password" placeholder="Password" name="password" class="login-field" />
             <button class="login-button button">
-                <i class="lni lni-enter"></i>
-                <p>Login</p>
+                <div class="button-wrapper">
+                    <i class="lni lni-enter"></i>
+                    <p>Login</p>
+                </div>
             </button>
         </form>
     </section>
