fix: profile picture aspect ratio on team members page

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -41,7 +41,7 @@
     --container-padding: 2rem 2.5rem;
     --card-padding: 1.5rem;
     --button-padding: 0.5rem 1rem;
-    --sidebar-padding: 1.5rem;
+    --sidebar-padding: 2rem 1.5rem;
 
     --main-font: 'Space Grotesk', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --icon-size: 1.2rem;
@@ -53,6 +53,8 @@ body {
     font-family: var(--main-font);
     display: flex;
     gap: var(--small-gap);
+    box-sizing: border-box;
+    padding: var(--small-gap);
 }
 
 a {
@@ -169,6 +171,15 @@ a {
     gap: var(--small-gap);
     background-color: var(--card-bg);
     color: var(--primary-fg);
+    overflow: hidden;
+}
+
+.team-member-details span#full-name {
+    -webkit-line-clamp: 1;
+            line-clamp: 1;
+    -webkit-box-orient: vertical;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
 
 .team-member-card[data-role="Manager"] {
@@ -906,6 +917,7 @@ button.disabled-button:hover .button-wrapper {
 
 .team-member-picture {
     width: 5rem;
+    min-width: 5rem;
     aspect-ratio: 1;
     object-fit: cover;
     border-radius: var(--circle-radius);
@@ -915,8 +927,8 @@ button.disabled-button:hover .button-wrapper {
 .team-member-details {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    flex-grow: 1;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .team-member-medium-details {
@@ -929,8 +941,9 @@ button.disabled-button:hover .button-wrapper {
 }
 
 .team-member-details #full-name {
-    font-weight: bold;
-    font-size: 1.2rem;
+    font-weight: 500;
+    font-size: 1.1rem;
+    text-overflow: ellipsis;
 }
 
 #full-name-medium {
