--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -4,7 +4,7 @@
 {{#if (eq page 'my-profile')}}
     <div class="top-page-bar">
         <div class="bg-button button">
-            <a class="button-wrapper" href="/edit-profile">
+            <a class="button-wrapper" href="/edit/profile">
                 <i class="lni lni-pencil-1"></i>
                 <p>Edit profile</p>
             </a>
