fix: profile edit page back button redirects to profile page.

--- a/views/layouts/form.hbs
+++ b/views/layouts/form.hbs
@@ -46,7 +46,7 @@
 
         <div class="page-title-bar">
             <button class="back-link" id="page-back-button">
-                <a class="button-wrapper" href="#">
+                <a class="button-wrapper">
                     <i class="lni lni-arrow-left"></i>
                 </a>
             </button>
