fix: incorrect route in member creation page

--- a/views/memberCreate.hbs
+++ b/views/memberCreate.hbs
@@ -1,5 +1,5 @@
 <div class="create-members-wizard card">
-    <form class="create-members-form" action="/create/createMembers" method="post">
+    <form class="create-members-form" action="/create/createMember" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <div class="form-row">
