fix: logging in with invalid details

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -26,3 +26,8 @@
         <a href="/forgot-password"><b>Forgot your password?</b></a>
     </section>
 </div>
+{{#if error}}
+<script>
+    alert("{{error}}");
+</script>
+{{/if}}
