fix: past events no results found

--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -34,7 +34,7 @@
     {{else}}
         <div class="no-results-container">
             <i class="lni lni-emoji-sad"></i>
-            <p class="no-results-message">No events found</p>
+            <p class="no-results-message">No results found</p>
         </div>
     {{/each}}
     {{#if showCreateButton}}
