--- a/views/pastEvents.hbs
+++ b/views/pastEvents.hbs
@@ -19,6 +19,9 @@
             {{/if}}
         {{/if}}
     {{else}}
-        <p class="no-events-message">No previous events found</p>
+        <div class="no-results-container">
+            <i class="lni lni-emoji-sad"></i>
+            <p class="no-results-message">No results found</p>
+        </div>
     {{/each}}
 </div>
