--- a/public/common/global.css
+++ b/public/common/global.css
@@ -1130,4 +1130,8 @@ button.disabled-button:hover .button-wrapper {
         flex-grow: 1;
         gap: var(--medium-gap);
     }
+
+    .attendance-box-text {
+        display: none;
+    }
 }
