--- a/public/common/eventAttendance.css
+++ b/public/common/eventAttendance.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     gap: var(--medium-gap);
     padding: 30px;
+    transition: transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .attendance-page-buttons {
