--- a/views/partials/attendanceBox.hbs
+++ b/views/partials/attendanceBox.hbs
@@ -13,14 +13,14 @@
         <button class="fg-button button present-button {{#if (eq attendance 'present')}}selected{{/if}}">
             <div class="fg-button-wrapper button-wrapper">
                 <i class="lni lni-check"></i>
-                <p>Present</p>
+                <p class="attendance-box-text">Present</p>
             </div>
         </button>
 
         <button class="fg-button button absent-button {{#if (eq attendance 'absent')}}selected{{/if}}">
             <div class="fg-button-wrapper button-wrapper">
                 <i class="lni lni-xmark"></i>
-                <p>Absent</p>
+                <p class="attendance-box-text">Absent</p>
             </div>
         </button>
     </div>
