feat: select team members on delete team members page

--- a/views/memberDelete.hbs
+++ b/views/memberDelete.hbs
@@ -1,5 +1,5 @@
 <div class="card">
-    <form class="form" action="/api/delete/member" method="post">
+    <form class="form" action="/api/delete/user" method="post">
         <div class="form-page-container">
             <div class="form-page" id="team-members-page">
                 <div class="grid-container">
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="form-controls">
-            <button type="submit" class="destructive-button button" id="form-submit-button">
+            <button type="submit" class="disabled-button destructive-button button" id="deleteMembersButton" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-trash-3"></i>
                     <p>Delete</p>
