feat: add delete supplier page

--- a/views/supplierDelete.hbs
+++ b/views/supplierDelete.hbs
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="form-controls">
-            <button type="submit" class="disabled-button destructive-button button" id="deleteMembersButton" disabled>
+            <button type="submit" class="disabled-button destructive-button button" id="deleteSuppliersButton" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-trash-3"></i>
                     <p>Delete</p>
