fix: edit details button not detecting valid form inputs

--- a/views/memberCreate.hbs
+++ b/views/memberCreate.hbs
@@ -16,14 +16,14 @@
                     <div class="text-field-container">
                         <label class="field-label" for="mobile-number">Mobile number</label>
                         <input type="text" id="mobile-number" class="text-field" name="mobile-number" required>
-                        <label class="text-field-description" for="mobile-number">The team member will use their phone number and password to sign in.</p>
+                        <label class="text-field-description" for="mobile-number">The team member will use their phone number and password to sign in.</label>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="password">Password</label>
                         <input type="password" id="password" class="text-field" name="password" required>
-                        <label class="text-field-description" for="password">Send the team member their login credentials and ask them to change their password as soon as possible.</p>
+                        <label class="text-field-description" for="password">Send the team member their login credentials and ask them to change their password as soon as possible.</label>
                     </div>
                 </div>
             </div>
