--- a/views/profileEdit.hbs
+++ b/views/profileEdit.hbs
@@ -35,7 +35,7 @@
                             <span class="error-text">*Required</span>
                         </div>
                         <input type="text" id="mobileNumber" class="text-field" name="mobile-number" value="{{user._id}}" required>
-                        <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number with no spaces and no country code.</p>
+                        <label class="text-field-description" id="phoneDescription" for="mobile-number">Enter a valid phone number with no spaces and no country code.</label>
                     </div>
                 </div>
                 <div class="form-row">
@@ -79,7 +79,7 @@
                             <span class="error-text">*Required</span>
                         </div>
                         <input type="password" id="newPassword" class="text-field" name="new-password" required>
-                        <label class="text-field-description" id="passLengthCheck" for="new-password">Your new password must contain at least 8 characters and not match your old one.</p>
+                        <label class="text-field-description" id="passLengthCheck" for="new-password">Your new password must contain at least 8 characters and not match your old one.</label>
                     </div>
                 </div>
                 <div class="form-row">
@@ -89,7 +89,7 @@
                             <span class="error-text">*Required</span>
                         </div>
                         <input type="password" id="reenterNewPassword" class="text-field" name="reenter-new-password" required>
-                        <label class="text-field-description" id="matchPassDesc" for="reenter-new-password">The passwords must match.</p>
+                        <label class="text-field-description" id="matchPassDesc" for="reenter-new-password">The passwords must match.</label>
                     </div>
                 </div>
                     
