--- a/public/common/global.css
+++ b/public/common/global.css
@@ -667,6 +667,10 @@ button.disabled-button:hover .button-wrapper {
     color: var(--error-light);
 }
 
+.error-field {
+    box-shadow: inset 0 0 0 1px var(--error-light);
+}
+
 .dropdown {
     position: relative;
     background-color: var(--secondary-bg);
