--- a/views/memberCreate.hbs
+++ b/views/memberCreate.hbs
@@ -4,24 +4,36 @@
             <div class="form-page">
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="first-name">First name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="first-name">First name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="first-name" class="text-field" name="first-name" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="last-name">Last name</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="last-name">Last name</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="last-name" class="text-field" name="last-name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="mobile-number">Mobile number</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="mobile-number">Mobile number</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="text" id="mobile-number" class="text-field" name="mobile-number" required>
                         <label class="text-field-description" for="mobile-number">The team member will use their phone number and password to sign in.</p>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="password">Password</label>
+                        <div class="field-label-container">
+                            <label class="field-label" for="password">Password</label>
+                            <span class="error-text">*Required</span>
+                        </div>
                         <input type="password" id="password" class="text-field" name="password" required>
                         <label class="text-field-description" for="password">Send the team member their login credentials and ask them to change their password as soon as possible.</p>
                     </div>
